<resources>
    <string name="app_name">Something</string>
    <string name="todo">ToDo</string>
    <string name="calendar">Calendar</string>
    <string name="drawer">Drawer</string>
    <string name="finished_todo">Finished ToDo</string>
    <string name="setting">Setting</string>
    <string name="add">Add</string>
    <string name="delete_success">Delete Success</string>
    <string name="undo">UnDo</string>
    <string name="set_finish_success">Set Finish Success</string>
    <string name="mark_at_the_top">Mart at the top.</string>
    <string name="show_on_notification">Show on notification</string>
    <string name="show_when_unlock_the_phone">Show when unlock the phone.</string>
    <string name="term">Term</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="finish">Finish</string>
    <string name="permission_request">Permission Request</string>
    <string name="require_permission">Permissions are required due to Google policy.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="fill_the_title">Fill the title.</string>
    <string name="fill_the_name">Fill the name.</string>
    <string name="edit">Edit</string>
    <string name="set_not_finished">Set Not Finished</string>
    <string name="set_finished">Set Finished</string>
    <string name="delete">Delete</string>
    <string name="delete_with_todo">Delete with ToDo?</string>
    <string name="no">No</string>
    <string name="yes">YES</string>
    <string name="name">Name</string>
    <string name="all">All</string>
    <string name="default_theme">Default Theme</string>
    <string name="show_finished_todo">Show Finished ToDo</string>
    <string name="default_drawer">Default Drawer</string>
    <string name="applies_when_the_app_restart">Apply when the app restart.</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="today">Today</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="replace">Replace</string>
    <string name="google_login_fail">Google login fail.</string>
    <string name="database_connect_fail">Database connnect fail.</string>
</resources>