<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:background="?attr/onBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/something_setting_card_view"
                    android:layout_margin="?attr/onBaseMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/something_setting_title_text_view"
                            style="@style/Theme.Something.Setting.Title"
                            android:text="@string/app_name"
                            android:gravity="center"
                            android:layout_margin="?attr/onBaseMargin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/something_default_theme_text_input_layout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                            android:hint="@string/default_theme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            app:boxBackgroundColor="?attr/onElementBackground"
                            app:layout_constraintTop_toBottomOf="@id/something_setting_title_text_view"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent">
                            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                android:editable="false"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/sticky_switch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="?attr/onBaseMargin"
                            android:layout_marginEnd="?attr/onBaseMargin"
                            android:text="@string/show_when_unlock_the_phone"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/something_default_theme_text_input_layout"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/todo_setting_card_view"
                    android:layout_margin="?attr/onBaseMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/something_setting_card_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/todo_setting_title_text_view"
                            style="@style/Theme.Something.Setting.Title"
                            android:text="@string/todo"
                            android:gravity="center"
                            android:layout_margin="?attr/onBaseMargin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/todo_show_finished_switch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="?attr/onBaseMargin"
                            android:layout_marginEnd="?attr/onBaseMargin"
                            android:text="@string/show_finished_todo"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/todo_setting_title_text_view" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/todo_default_drawer_text_input_layout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                            android:hint="@string/default_drawer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            app:boxBackgroundColor="?attr/onElementBackground"
                            app:layout_constraintTop_toBottomOf="@id/todo_show_finished_switch"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent">
                            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                android:editable="false"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/calendar_setting_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="?attr/onBaseMargin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/todo_setting_card_view">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/calendar_setting_title_text_view"
                            style="@style/Theme.Something.Setting.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="?attr/onBaseMargin"
                            android:gravity="center"
                            android:text="@string/calendar"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/calendar_show_finished_switch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="?attr/onBaseMargin"
                            android:layout_marginEnd="?attr/onBaseMargin"
                            android:text="@string/show_finished_todo"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/calendar_setting_title_text_view" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>




    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>