<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.taetae98.something.dto.ToDo" />
        <import type="com.taetae98.something.dto.Drawer" />
        <import type="android.view.View.OnClickListener" />

        <variable
            name="todo"
            type="ToDo" />

        <variable
            name="drawer"
            type="Drawer" />

        <variable
            name="onFinish"
            type="OnClickListener" />

        <variable
            name="onSetBegin"
            type="OnClickListener" />

        <variable
            name="onSetEnd"
            type="OnClickListener" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:background="?attr/onBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/layout"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/option_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="?attr/onBaseMargin"
                    app:cardBackgroundColor="?attr/onElementBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/on_top_switch"
                            android:checked="@{todo.onTop}"
                            android:text="@string/mark_at_the_top"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="?attr/onBaseMargin"
                            android:layout_marginEnd="?attr/onBaseMargin"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/notification_switch"
                            android:checked="@{todo.notification}"
                            android:text="@string/show_on_notification"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="?attr/onBaseMargin"
                            android:layout_marginEnd="?attr/onBaseMargin"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/on_top_switch" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/term_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="?attr/onBaseMargin"
                    app:cardBackgroundColor="?attr/onElementBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/option_card_view">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/term_switch"
                            android:checked="@{todo.hasTerm}"
                            android:text="@string/term"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="?attr/onBaseMargin"
                            android:layout_marginEnd="?attr/onBaseMargin"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/term_begin_layout"
                            android:onClick="@{onSetBegin}"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/term_end_layout"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/term_switch">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/term_begin_text_view"
                                android:text="@string/begin"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="?attr/onBaseMargin"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/term_begin"
                                app:date="@{todo.beginTime}"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="?attr/onBaseMargin"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/term_begin_text_view"
                                tools:text = "2000 / 10 / 10"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/term_end_layout"
                            android:onClick="@{onSetEnd}"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/term_begin_layout"
                            app:layout_constraintTop_toBottomOf="@id/term_switch">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/term_end_text_view"
                                android:text="@string/end"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="?attr/onBaseMargin"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/term_end"
                                app:date="@{todo.endTime}"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="?attr/onBaseMargin"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/term_end_text_view"
                                tools:text = "2000 / 10 / 11" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/drawer_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="?attr/onBaseMargin"
                    app:cardBackgroundColor="?attr/onElementBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/term_card_view">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/drawer_switch"
                            android:checked="@{todo.drawerId != null}"
                            android:text="@string/drawer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="?attr/onBaseMargin"
                            android:layout_marginEnd="?attr/onBaseMargin"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                            android:id="@+id/drawer_text_input_layout"
                            android:hint="@string/drawer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxBackgroundColor="?attr/onElementBackground"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/drawer_switch">

                            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                android:text="@{drawer.name}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:editable="false" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/input_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="?attr/onBaseMargin"
                    app:cardBackgroundColor="?attr/onElementBackground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/drawer_card_view">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                            android:id="@+id/title_text_input_layout"
                            android:hint="@string/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxBackgroundColor="?attr/onElementBackground"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                style="@style/Theme.Something.ToDo.Title"
                                android:text="@{todo.title}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                            android:id="@+id/description_text_input_layout"
                            android:hint="@string/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxBackgroundColor="?attr/onElementBackground"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/title_text_input_layout">

                            <com.google.android.material.textfield.TextInputEditText
                                style="@style/Theme.Something.ToDo.Description"
                                android:text="@{todo.description}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textMultiLine" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:onClick="@{onFinish}"
            android:src="@drawable/ic_finish"
            android:contentDescription="@string/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="?attr/onBaseMargin"
            app:tint="?attr/onBackgroundAccent"
            app:backgroundTint="?attr/onBackgroundVariant"
            app:layout_anchor="@id/layout"
            app:layout_anchorGravity="end|bottom" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>